aya-parser/src/parser/snapshots/aya_parser__parser__tests__exported_constant.snap
---
source: aya-parser/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Const {
            name: ByteOffset {
                start: 7,
                end: 11,
            },
            exported: true,
            value: Address(
                ByteOffset {
                    start: 17,
                    end: 21,
                },
            ),
        },
    ],
}
