aya-parser/src/parser/snapshots/aya_parser__parser__tests__exported_label.snap
---
source: aya-parser/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Label {
            name: ByteOffset {
                start: 1,
                end: 5,
            },
            exported: true,
        },
    ],
}
