aya-parser/src/parser/snapshots/aya_parser__parser__tests__private_constant.snap
---
source: aya-parser/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Const {
            name: ByteOffset {
                start: 6,
                end: 10,
            },
            exported: false,
            value: HexLiteral(
                ByteOffset {
                    start: 14,
                    end: 18,
                },
            ),
        },
    ],
}
