aya-parser/src/parser/snapshots/aya_parser__parser__tests__private_data16.snap
---
source: aya-parser/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Data {
            name: ByteOffset {
                start: 7,
                end: 11,
            },
            size: 16,
            exported: false,
            values: [
                Address(
                    ByteOffset {
                        start: 19,
                        end: 23,
                    },
                ),
                HexLiteral(
                    ByteOffset {
                        start: 27,
                        end: 31,
                    },
                ),
            ],
        },
    ],
}
