aya-parser/src/parser/snapshots/aya_parser__parser__tests__private_label.snap
---
source: aya-parser/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Label {
            name: ByteOffset {
                start: 0,
                end: 4,
            },
            exported: false,
        },
    ],
}
